Refactor ScopedFocusNavigation class

In ScopedFocusNavigation class, the navigation in slot scope, 
fallback scope and tree scope differs.
There are better ways in element traversal for each 3 scopes.
To make the computational complexity better, it's better to separate.
This CL is the prepatation step for the improvoment described above.

Change-Id: I91ac45223035279dcaeeb53a97849ba5e06632ef
Bug: 763794